Integrando e implementando el componente Dashboard, Sidebar, Navbar y AgregarProductos respectivamente

--- a/src/app/shared/components/sidebar/sidebar.html
+++ b/src/app/shared/components/sidebar/sidebar.html
@@ -9,7 +9,7 @@
 			</svg>
 		</div>
 		<div class="flex flex-col">
-			<span class="text-blue-600 font-semibold text-lg">BistroPulse</span>
+			<span class="text-blue-600 font-semibold text-lg">Stockify</span>
 			<small class="text-gray-400 text-xs">Admin</small>
 		</div>
 	</div>
@@ -17,8 +17,8 @@
 	<!-- Menu -->
 	<ul class="space-y-1">
 		<!-- Dashboard (activo) -->
-		<li>
-			<a href="#" class="flex items-center gap-3 px-3 py-2 rounded-md text-blue-700 bg-blue-50 border-l-4 border-blue-600">
+		<li (click)="navegar('layout/dashboard')" class="hover:cursor-pointer">
+			<a class="flex items-center gap-3 px-3 py-2 rounded-md text-blue-700 bg-blue-50 border-l-4 border-blue-600">
 				<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 flex-shrink-0" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
 					<path stroke-linecap="round" stroke-linejoin="round" d="M3 12l2-2m0 0l7-7 7 7M13 5v6h6" />
 				</svg>
@@ -50,19 +50,19 @@
 				</svg>
 			</div>
 			<!-- Submenu (estática) -->
-			<ul class="mt-1 ml-8 space-y-1">
+			<ul class="ml-8 space-y-1">
 				<li>
-					<a href="#" class="flex items-center gap-2 px-3 py-1 rounded-md text-gray-600 hover:bg-gray-50 text-sm">Restaurant List</a>
+					<button (click)="navegar('layout/productos')" class="hover:cursor-pointer flex items-center gap-2 px-3 py-1 rounded-md text-gray-600 hover:bg-gray-50 text-sm">Lista de productos</button>
 				</li>
-				<li>
-					<a href="#" class="flex items-center gap-2 px-3 py-1 rounded-md text-gray-600 hover:bg-gray-50 text-sm">New Restaurant Request</a>
+				<li class="hover:cursor-pointer">
+					<a class="flex items-center gap-2 px-3 py-1 rounded-md text-gray-600 hover:bg-gray-50 text-sm">New Restaurant Request</a>
 				</li>
 			</ul>
 		</li>
 
 		<!-- Rider Management -->
-		<li>
-			<a href="#" class="flex items-center gap-3 px-3 py-2 rounded-md text-gray-700 hover:bg-gray-50">
+		<li (click)="navegar('layout/productos')">
+			<a class="flex items-center gap-3 px-3 py-2 rounded-md text-gray-700 hover:bg-gray-50">
 				<svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 flex-shrink-0 text-gray-500" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
 					<path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" />
 				</svg>
@@ -103,4 +103,6 @@
 			</a>
 		</li>
 	</ul>
+
+	<button (click)="navegar('layout/productos')" class="border rounded-md p-1">asdasd</button>
 </nav>
