Implementando componentes para Ordenes,Historial de ordenes y detalle de productos

--- a/src/app/shared/components/sidebar/sidebar.html
+++ b/src/app/shared/components/sidebar/sidebar.html
@@ -55,7 +55,10 @@
 					<button (click)="navegar('layout/productos')" class="hover:cursor-pointer flex items-center gap-2 px-3 py-1 rounded-md text-gray-600 hover:bg-gray-50 text-sm">Lista de productos</button>
 				</li>
 				<li class="hover:cursor-pointer">
-					<a class="flex items-center gap-2 px-3 py-1 rounded-md text-gray-600 hover:bg-gray-50 text-sm">New Restaurant Request</a>
+					<button (click)="navegar('layout/ordenes')" class="hover:cursor-pointer flex items-center gap-2 px-3 py-1 rounded-md text-gray-600 hover:bg-gray-50 text-sm">Ordenes</button>
+				</li>
+				<li class="hover:cursor-pointer">
+					<button (click)="navegar('layout/historial-ordenes')" class="hover:cursor-pointer flex items-center gap-2 px-3 py-1 rounded-md text-gray-600 hover:bg-gray-50 text-sm">Historial de ordenes</button>
 				</li>
 			</ul>
 		</li>
@@ -103,6 +106,4 @@
 			</a>
 		</li>
 	</ul>
-
-	<button (click)="navegar('layout/productos')" class="border rounded-md p-1">asdasd</button>
 </nav>
