--- a/src/app/components/api-practice/api-practice.html
+++ b/src/app/components/api-practice/api-practice.html
@@ -1,2 +1,11 @@
-<p>api-practice works!</p>
-<button class="border rounded-md p-1 hover:cursor-pointer" (click)="PokeAPi()">Call to API</button>
+<div class="flex justify-center pt-8">
+
+    <button class="border 
+    rounded-md p-2
+    hover:cursor-pointer 
+    bg-blue-500 text-white" 
+    (click)="confirmacionPost()">Click</button>
+
+    
+
+</div>
