--- a/src/app/features/auth/pages/login/login.html
+++ b/src/app/features/auth/pages/login/login.html
@@ -11,12 +11,12 @@
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
           
           <div class="form-group">
-            <label class="form-label">Correo electronico</label>
+            <label class="form-label">Nombre de usuario</label>
             <input
-              type="email"
-              formControlName="email"
+              type="text"
+              formControlName="username"
               class="form-input"
-              placeholder="login@gmail.com"
+              placeholder="leoBarba321"
               [class.error]="email?.invalid && email?.touched"
             />
             <div *ngIf="email?.invalid && email?.touched" class="error-message">
