Configurando temas de seguridad en el login

--- a/src/app/components/dashboard/dashboard.html
+++ b/src/app/components/dashboard/dashboard.html
@@ -1,1 +1,5 @@
 <app-order-stats></app-order-stats>
+<button class="border rounded-md p-1 hover:cursor-pointer" (click)="getUsers()">Get users</button>
+<button class="border rounded-md p-1 hover:cursor-pointer" (click)="CerrarSesion()">Cerrar sesión</button>
+<button class="border rounded-md p-1 hover:cursor-pointer" (click)="CargarEnMemoria('esto_sera_un_dato')">Cargar en Memoria</button>
+
