--- a/src/app/features/auth/pages/pages-not-found/pages-not-found.html
+++ b/src/app/features/auth/pages/pages-not-found/pages-not-found.html
@@ -8,10 +8,17 @@
 			<p class="text-gray-500 max-w-xl">¡Estamos trabajando en esta página! Estará lista muy pronto.</p>
 
 			<div class="flex items-center gap-3 mt-4">
-                <button (click)="navegar('layout/dashboard')" class="hover:cursor-pointer inline-flex items-center gap-3 px-4 py-2 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700">
-                    <i class="fas fa-arrow-left"></i>
+				<button (click)="navegar('layout/dashboard')"
+					class="hover:cursor-pointer inline-flex items-center gap-3 px-4 py-2 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700">
+					<i class="fas fa-arrow-left"></i>
 					<span>Regresar al dashboard</span>
-                </button>
+				</button>
+
+				<button (click)="mostrarDataEnMemoria()"
+					class="hover:cursor-pointer inline-flex items-center gap-3 px-4 py-2 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700">
+					<i class="fas fa-arrow-left"></i>
+					<span>Mostrar data</span>
+				</button>
 			</div>
 		</div>
 
@@ -19,9 +26,10 @@
 		<div class="flex items-center justify-center">
 			<div class="w-full max-w-md">
 				<!-- Reemplaza el src por la ruta a tu imagen, por ejemplo: assets/images/404.png -->
-				<img src="construction.png" alt="404 illustration" class="w-full h-auto object-contain rounded-lg shadow-lg bg-white" />
+				<img src="construction.png" alt="404 illustration"
+					class="w-full h-auto object-contain rounded-lg shadow-lg bg-white" />
 			</div>
 		</div>
 	</div>
-</div>
 
+</div>
